--- a/ingress/values.yaml
+++ b/ingress/values.yaml
@@ -1,8 +1,9 @@
 ingress:
   namespace: default
   host: stackator.com
-  serviceName: frontend
-  servicePort: 80
+  service:
+    name: frontend
+    port: 80
   forceSSLRedirect: "true"
   ingressClass: external-ingress
   # annotations:
